[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/scenes/scripts/tube.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/tubes/spr_tubeDefault_0.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48, 373.092 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50.34, 16 )

[sub_resource type="RectangleShape2D" id=3]

[node name="RigidBody2D" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )
tubeSpeed = 525

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"playerDeathCollider",
]]
position = Vector2( 0, -440 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="." groups=[
"playerDeathCollider",
]]
position = Vector2( 0, 496 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="." groups=[
"playerDeathCollider",
]]
position = Vector2( 0.323547, -50.9118 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="." groups=[
"playerDeathCollider",
]]
position = Vector2( -0.470886, 107.912 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 24 )
scale = Vector2( 1, 5.2 )
shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 69.1003, -53.2557 )
[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
